RESOLVED FIXED261473
[IFC][out-of-flow bidi] Crash when bidi includes inline boxes with "unicode-code"
https://bugs.webkit.org/show_bug.cgi?id=261473
Summary [IFC][out-of-flow bidi] Crash when bidi includes inline boxes with "unicode-c...
alan
Reported 2023-09-12 12:21:14 PDT
ssia
Attachments
[fast-cq]Patch (4.37 KB, patch)
2023-09-12 12:26 PDT, alan
no flags
alan
Comment 1 2023-09-12 12:26:07 PDT
Created attachment 467667 [details] [fast-cq]Patch
EWS
Comment 2 2023-09-12 16:09:09 PDT
Committed 267924@main (840533a730b1): <https://commits.webkit.org/267924@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467667 [details].
Radar WebKit Bug Importer
Comment 3 2023-09-12 16:10:20 PDT
Note You need to log in before you can comment on or make changes to this bug.