[IFC][out-of-flow bidi] Crash when bidi includes inline boxes with "unicode-code" https://bugs.webkit.org/show_bug.cgi?id=261473

Reviewed by Antti Koivisto.

Use the correct index when checking for visual order.

* LayoutTests/fast/inline/out-of-flow-box-in-bidi-simple-expected.txt: Added.
* LayoutTests/fast/inline/out-of-flow-box-in-bidi-simple.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):
(WebCore::Layout::InlineDisplayContentBuilder::setGeometryForBlockLevelOutOfFlowBoxes):

Canonical link: https://commits.webkit.org/267924@main